Fix blank error dialog from credential provider.

When the user enters an old password into the credential provider after
a password change, make sure to use an appropriate message.  At the same time
make sure that all error paths return a valid string otherwise a blank error
will be shown.

Bug: 902706
Change-Id: I2835f8b11d8f1f116e64333d47515115b642b066
Reviewed-on: https://chromium-review.googlesource.com/c/1323270
Reviewed-by: Owen Min <zmin@chromium.org>
Commit-Queue: Roger Tawa <rogerta@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606179}
Former-commit-id: 7732159f9ff394cd39c76d783dc99ed87a2e200a